--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-js-dropdown",
-  "version": "2.2.1",
+  "version": "3.0.0-wip",
   "ignore": [
     "**/.*",
     "node_modules",
